--- a/src/app/groups/groups-view/group-actions/manage-group-members/group_member_details.html
+++ b/src/app/groups/groups-view/group-actions/manage-group-members/group_member_details.html
@@ -5,7 +5,7 @@
       <p matLine class="p-t-10">External Id: <b>{{data.externalId}}</b></p>
       <p matLine class="p-t-10">Office Name: <b>{{data.officeName}}</b></p>
       <p matLine class="p-t-10">Staff Name: <b>{{data.staffName}}</b></p>
-      <p matLine class="p-t-10">Mobile No: <b>{{data.mobileNo}}</b></p>
+      <!-- <p matLine class="p-t-10">Mobile No: <b>{{data.mobileNo}}</b></p> -->
     </div>
 </mat-nav-list>
 
