--- a/src/app/transactions/rollTerm-schedule-transaction/dialog/roll-term-schedule/roll-term-schedule-dialog.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/dialog/roll-term-schedule/roll-term-schedule-dialog.component.html
@@ -114,6 +114,7 @@
            </th>
           <td mat-cell *matCellDef="let transaction">
             <mat-icon
+              *ngIf="permitFee"
               style="color: red;"
               title="Chi tiền"
               mat-dialog-close
