add Google firebase messaging service
Lưu ý nếu gặp lỗi khi chạy gây ra bởi thu viện firebase như sau:
  '__spreadArray' was not found in 'tslib'
Thì cứ bay vào các file báo lỗi và thay chuỗi '__spreadArray' thành '__spreadArrays'

Đây là lỗi typo của thư viện.

--- a/src/assets/styles/_alert.scss
+++ b/src/assets/styles/_alert.scss
@@ -3,6 +3,7 @@
     color: #fff;
     font-weight: 500;
     background-color: $msg-success;
+    white-space: pre-wrap;
     .mat-button-wrapper{
         color: #fff
     }
@@ -12,6 +13,7 @@
     color: #fff;
     font-weight: 500;
     background-color: $msg-info;
+    white-space: pre-wrap;
     .mat-button-wrapper{
         color: #fff
     }
@@ -21,6 +23,7 @@
     color: #fff;
     font-weight: 500;
     background-color: $msg-warning;
+    white-space: pre-wrap;
     .mat-button-wrapper{
         color: #fff
     }
@@ -30,6 +33,7 @@
     color: #fff;
     font-weight: 500;
     background-color: $msg-danger;
+    white-space: pre-wrap;
     .mat-button-wrapper{
         color: #fff
     }
