--- a/src/app/groups/groups-view/group-actions/manage-group-members/manage-group-members.component.html
+++ b/src/app/groups/groups-view/group-actions/manage-group-members/manage-group-members.component.html
@@ -40,7 +40,7 @@
 
     <h3 matSubheader>Client Members</h3>
 
-    <mat-nav-list *ngIf="clientMembers?.length">
+    <!-- <mat-nav-list *ngIf="clientMembers?.length">
       <div mat-list-item *ngFor="let client of clientMembers index as i">
         <span matLine class="p-t-10">{{client.displayName}} - chi nhánh: {{client.officeName}} </span>
         <div fxFlex></div>
@@ -51,7 +51,7 @@
           <fa-icon icon="trash"></fa-icon>
         </button>
       </div>
-    </mat-nav-list>
+    </mat-nav-list> -->
     
     <div class="fix-table1-client">
       <div fxLayout fxLayoutAlign="start center">
@@ -59,22 +59,27 @@
           <input matInput type="text" (keyup)="doFilterGroupClients($event.target.value)" placeholder="Filter">
         </mat-form-field>
       </div>
-      <table mat-table [dataSource]="dataSource"
+      <table mat-table [dataSource]="dataSource" matSort
         class="mat-elevation-z1 m-b-30 ">
-        <ng-container matColumnDef="Name">
-          <th mat-header-cell *matHeaderCellDef> {{'Group_Component.General_tab.Name' |translate}} </th>
+        <ng-container matColumnDef="displayName">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Group_Component.General_tab.Name' |translate}} </th>
           <td mat-cell *matCellDef="let element">
-            <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
             {{element.displayName}}
           </td>
-        </ng-container> 
+        </ng-container>
+        <ng-container matColumnDef="Status">
+          <th mat-header-cell *matHeaderCellDef>Trạng thai</th>
+          <td mat-cell *matCellDef="let element">
+            <i class="fa fa-stop" [ngClass]="element.status.code|statusLookup" [matTooltip]="element.status.value"></i>
+          </td>
+        </ng-container>
         <ng-container matColumnDef="Action">
           <th mat-header-cell *matHeaderCellDef> Thao tác</th>
           <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="primary" (click)="showClientDetail(element)">
               <fa-icon icon="eye"></fa-icon>
             </button>
-            <button mat-icon-button color="warn" (click)="removeClient(i, client)">
+            <button mat-icon-button color="warn" (click)="removeClient(i, element)">
               <fa-icon icon="trash"></fa-icon>
             </button>
           </td>
